--- a/LedgerSystem/mainsite/templates/home.html
+++ b/LedgerSystem/mainsite/templates/home.html
@@ -30,8 +30,9 @@ Home
         <option value="0">Null</option>
         {% endif %}
     </select>
-    <div id="bankDetailssortCodeDiv" name="bankDetailssortCodeDiv">
-
+    <div id="bankDetailssortCodeDiv" name="bankDetailssortCodeDiv" class="sec" style="display:none;">
+        <small id="bankSortCode" name="bankSortCode"></small>
+        <input type="number" name="accNum" id="accNum" placeholder="accNum">
     </div>
     no, service name, sort code
   </form>
